--- a/LineageActions/res/xml/fp_gesture_panel.xml
+++ b/LineageActions/res/xml/fp_gesture_panel.xml
@@ -71,4 +71,75 @@
             android:entryValues="@array/fp_keys_listValues" />
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:key="fp_keys_scr_off"
+        android:title="@string/fingerprint_actions_screenoff"
+        android:enabled="false" >
+
+        <SwitchPreference
+            android:key="fp_haptic_scr_off"
+            android:dependency="fp_home_scr_off"
+            android:defaultValue="0"
+            android:title="@string/haptic_feedback"
+            android:summary="@string/haptic_feedback_summary" />
+
+        <SwitchPreference
+            android:key="fp_proximity_check_scr_off"
+            android:dependency="fp_home_scr_off"
+            android:defaultValue="1"
+            android:title="@string/allow_proximity_sensor_title"
+            android:summary="@string/allow_proximity_sensor_summary" />
+
+        <ListPreference
+            android:dependency="fp_home_scr_off"
+            android:title="@string/fingerprint_tap_title"
+            android:summary="%s"
+            android:dialogTitle="@string/fingerprint_tap_dlg_title"
+            android:key="fp_keys_off"
+            android:defaultValue="0"
+            android:entries="@array/fp_keys_screen_off_listArray"
+            android:entryValues="@array/fp_keys_screen_off_listValues" />
+
+        <ListPreference
+            android:dependency="fp_home_scr_off"
+            android:title="@string/fingerprint_double_tap_title"
+            android:summary="%s"
+            android:dialogTitle="@string/fingerprint_double_tap_dlg_title"
+            android:key="fp_key_dbltap_off"
+            android:defaultValue="0"
+            android:entries="@array/fp_keys_screen_off_listArray"
+            android:entryValues="@array/fp_keys_screen_off_listValues" />
+
+        <ListPreference
+            android:dependency="fp_home_scr_off"
+            android:title="@string/fingerprint_long_tap_title"
+            android:summary="%s"
+            android:dialogTitle="@string/fingerprint_long_tap_dlg_title"
+            android:key="fp_key_hold_off"
+            android:defaultValue="0"
+            android:entries="@array/fp_keys_screen_off_listArray"
+            android:entryValues="@array/fp_keys_screen_off_listValues" />
+
+        <ListPreference
+            android:dependency="fp_home_scr_off"
+            android:title="@string/fingerprint_swipe_left_title"
+            android:summary="%s"
+            android:dialogTitle="@string/fingerprint_swipe_left_dlg_title"
+            android:key="fp_key_left_off"
+            android:defaultValue="0"
+            android:entries="@array/fp_keys_screen_off_listArray"
+            android:entryValues="@array/fp_keys_screen_off_listValues" />
+
+        <ListPreference
+            android:dependency="fp_home_scr_off"
+            android:title="@string/fingerprint_swipe_right_title"
+            android:summary="%s"
+            android:dialogTitle="@string/fingerprint_swipe_right_dlg_title"
+            android:key="fp_key_right_off"
+            android:defaultValue="0"
+            android:entries="@array/fp_keys_screen_off_listArray"
+            android:entryValues="@array/fp_keys_screen_off_listValues" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
